Fix gradle build